--- a/mapa.html
+++ b/mapa.html
@@ -123,24 +123,18 @@
           {
             nombre: "Die Lavendel Chalet",
             posicion: { lat: -31.95518, lng: -64.53784 },
-            icono: "https://maps.google.com/mapfiles/ms/icons/cyan-dot.png",
+            icono: "https://maps.google.com/mapfiles/ms/icons/purple-dot.png",
             logo: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSP5oVMVVw-IQaJq50UYF1Y8m1kNK1CVzAFMA&s",
             resena: "Alojamiento rodeado de naturaleza y tranquilidad."
           },
           {
             nombre: "Panacea Hotel Boutique",
             posicion: { lat: -31.980496571994333, lng: -64.5584284470777 },
-            icono: "https://maps.google.com/mapfiles/ms/icons/violet-dot.png",
-            logo: "https://cdn-icons-png.flaticon.com/512/2331/2331938.png",
+            icono: "https://maps.google.com/mapfiles/ms/icons/green-dot.png",
+            logo: "c:\Users\pc04\Desktop\imagenes\images.png",
             resena: "Hotel boutique con spa y servicios personalizados."
           },
-          {
-            nombre: "Radio 101.9 FM V.G.B",
-            posicion: { lat: -31.97899, lng: -64.56581 },
-            icono: "https://maps.google.com/mapfiles/ms/icons/grey-dot.png",
-            logo: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShLUV7oAaC7WPhEKsSz2H591F8KPARfDupcg&s",
-            resena: "Radio local con programación variada."
-          },
+
         ];
 
         marcadores.forEach((m) => {
