--- a/codigo/mapa.html
+++ b/codigo/mapa.html
@@ -131,7 +131,7 @@
             nombre: "Panacea Hotel Boutique",
             posicion: { lat: -31.980496571994333, lng: -64.5584284470777 },
             icono: "https://maps.google.com/mapfiles/ms/icons/ltblue-dot.png",
-            logo: "c:\Users\thoma\OneDrive\Escritorio\Codigo completo\Congreso\imagenes\i12.jpg",
+            logo: "imagenes/panacea.png",
             resena: "Hotel boutique con spa y servicios personalizados."
           },
           {
