--- a/mapa.html
+++ b/mapa.html
@@ -123,7 +123,7 @@
           {
             nombre: "Die Lavendel Chalet",
             posicion: { lat: -31.95518, lng: -64.53784 },
-            icono: "https://maps.google.com/mapfiles/ms/icons/pink-dot.png",
+            icono: "https://maps.google.com/mapfiles/ms/icons/red-dot.png",
             logo: "imagenes/images (1).jpg",
             resena: "Alojamiento rodeado de naturaleza y tranquilidad."
           },
@@ -131,7 +131,7 @@
             nombre: "Panacea Hotel Boutique",
             posicion: { lat: -31.980496571994333, lng: -64.5584284470777 },
             icono: "https://maps.google.com/mapfiles/ms/icons/ltblue-dot.png",
-            logo: "imagenes/boutique.jpg",
+            logo: "imagenes/panacea.png",
             resena: "Hotel boutique con spa y servicios personalizados."
           },
           {
