--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 </head>
 <body>
     <div class="background">
+
+        <h1>Bienvenido al Congreso de Idiomas</h1>
         
     <a href="mapa.html" class="boton">Ingresar</a>
 
