--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
         
     <a href="mapa.html" class="boton">Ingresar</a>
 
+    <a href="https://wa.me/5493546416327" target="_blank">
+        <img src="c:\Users\thoma\OneDrive\Imágenes\WhatsApp-Logo-PNG2.png" 
+        width="10%" 
+        class="contacto" 
+        alt="WhatsApp">
+    </a>
+
         <div class="sponsors-container" id="sponsors">
             <!-- Logos se insertan aquí dinámicamente -->
         </div>
