--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <a href="mapa.html" class="boton">Ingresar</a>
 
     <a href="https://wa.me/5493546416327" target="_blank">
-        <img src="cc:\Users\thoma\OneDrive\Escritorio\Codigo completo\Congreso\imagenes\WhatsApp-Logo-PNG2.png" 
+        <img src="c:\Users\thoma\OneDrive\Escritorio\Codigo completo\Congreso\imagenes\WhatsApp-Logo-PNG2.png" 
         width="10%" 
         class="contacto" 
         alt="WhatsApp">
